# electrostatics-engine

./: README.md  pyproject.toml
examples/: parallel_plate.py
src/electrostatics/: geometry.py  grid.py  visualize.py
