[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "electrostatics"
version = "0.1.0"
description = "Computational electrostatics engine for EHD thruster and plasma actuator studies"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]